actualizacion de index.html con una imagen

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>pruebas git</h1>
-    <img src="imagenes/hola_mundo.png" alt="hola mundo">
+    <img src="imagenes/hola_mundo.png" alt="hola mundo"><br>
+    <img src="imagenes/regalo.png" alt="regalo">
 </body>
 </html>
