--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>pruebas git</h1>
     <img src="imagenes/hola_mundo.png" alt="hola mundo"><br>
     <img src="imagenes/regalo.png" alt="regalo">
+    <h3>escrito desde github en la rama nueva luz</h3>
 </body>
 </html>
